2000-11-20  H.J. Lu  <hjl@gnu.org>

	* readelf.c (get_osabi_name): Change ELFOSABI_MONTEREY to
	ELFOSABI_AIX.

2000-11-17  Richard Henderson  <rth@redhat.com>

	* readelf.c (display_debug_lines): Adjust last change to
	use sizeof (external->li_length).

2000-11-17  Richard Henderson  <rth@redhat.com>

	* readelf.c (display_debug_lines): Fix section length check
	and end_of_sequence computation.

2000-11-06  Nick Clifton  <nickc@redhat.com>

	* binutils.texi: Add GNU Free Documentation License.
	* objcopy.1: Add GNU Free Documentation License.
	* objdump.1: Add GNU Free Documentation License.
	* addr2line.1: Add GNU Free Documentation License.
	* ar.1: Add GNU Free Documentation License.
	* nlmconv.1: Add GNU Free Documentation License.
	* nm.1: Add GNU Free Documentation License.
	* ranlib.1: Add GNU Free Documentation License.
	* size.1: Add GNU Free Documentation License.
	* strings.1: Add GNU Free Documentation License.
	* strip.1: Add GNU Free Documentation License.

2000-10-06  Luciano Gemme <ishitawa@yahoo.com>

	* objcopy.c (--srec-len=nn): New parameter to set the
	maximum length of generated Srecords.
	(--srec-forceS3): New parameter that restricts the generation of
	Srecords to type S3 only.
	* binutils.texi: Document new command line switches.
	* objcopy.1: Docuemnt the new command line switches.
	* NEWS: Announce the existence of the new command line switches.
	
2000-10-31  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Add Jim Wilson as the maintainer for the IA64
	code.  Add Eric Chrisopher as maintainer of MN10300 port.

2000-10-12  Roger Sayle  <roger@metaphorics.com>

	* Make comma after string after icon/control optional.

2000-09-13  Anders Norlander  <anorland@acc.umu.se>

	* readelf.c (get_machine_flags): Also print EF_MIPS_MACH field.

	* NEWS: Mention support for MIPS32.
	
2000-09-08  Nick Clifton  <nickc@redhat.com>

	* MAINTAINERS: Add Stephane Carrez as maintainer for 68HC[11|12].

2000-09-07  H.J. Lu  <hjl@gnu.org>
